force-app/main/default/objects/smagicinteract__smsMagic__c/smagicinteract__smsMagic__c.object-meta.xml
<CustomObject>
    <customHelpPage>smagicinteract__SMSMagicHelp</customHelpPage>
    <description>SMSMagic object in Interact, This is basic Object which stores information about Outgoing SMS.</description>
    <label>SMS History</label>
    <nameField>
        <displayFormat>SM-{000000000}</displayFormat>
        <label>Record number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>