force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__CreatedOn__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__CreatedOn__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>CreatedOn</label>
    <type>DateTime</type>
</CustomField>