force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__disableSMSOnTrigger__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__disableSMSOnTrigger__c</fullName>
    <defaultValue>0</defaultValue>
    <label>disableSMSOnTrigger</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>