force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Name__c</fullName>
    <description>Name of the sms receiver</description>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>