force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__response__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__response__c</fullName>
    <label>response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>