force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Sent_By__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>