force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__sentStatus__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__sentStatus__c</fullName>
    <label>sentStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>