force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__SMSText__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMSText__c</fullName>
    <label>SMSText</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>