force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Source__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Source__c</fullName>
    <defaultValue>&quot;1150&quot;</defaultValue>
    <label>Source</label>
    <length>18</length>
    <type>Text</type>
</CustomField>