force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Type__c</fullName>
    <defaultValue>&quot;Outgoing&quot;</defaultValue>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>